<resources>
    <string name="app_name">Android</string>
    <string name="version">Version</string>
    <string name="imei">IMEI</string>
    <string name="close">close</string>
    <string name="explanation">The application requests permission to access your functions to show your IMEI.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About</string>

    <string name="profile_edit_full_name">Full name</string>
    <string name="profile_edit_phone">Phone</string>
    <string name="profile_edit_email">Email</string>
    <string name="profile_button_edit">Edit</string>
    <string name="profile_button_logout">Logout</string>
    <string name="profile_show_error_message">Some error occurred.</string>
</resources>
